@@ -1,3 +1,8 @@
+2003-10-13	Joel Sherrill <joel@OARcorp.com>
+
+	* src/cleanuppop.c, src/cleanuppush.c: Protect use of
+	_Workspace_Allocate and _Workspec_Free.
+
 2003-09-04	Joel Sherrill <joel@OARcorp.com>
 
 	* include/rtems/posix/cond.h, include/rtems/posix/condmp.h,
